--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "angular-desktop",
   "version": "0.0.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
+    "test": "ng test",
+    "build-src": "ng build --base-href ./",
+    "desk": "ng build --base-href ./ && electron ."
+},
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
@@ -27,6 +30,7 @@
     "@angular/cli": "~14.2.3",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
+    "electron": "^22.1.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
